Deploy preview for PR 3 🛫

--- a/pr-preview/pr-3/materials/activities/03-practice-arrow.html
+++ b/pr-preview/pr-3/materials/activities/03-practice-arrow.html
@@ -238,24 +238,23 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
 
 <section id="the-pums-dataset" class="level2">
 <h2 class="anchored" data-anchor-id="the-pums-dataset">The PUMS Dataset</h2>
-<div class="incremental">
-<ul class="incremental">
+<p><a href="https://scaling-arrow-pums.s3.us-east-1.amazonaws.com/readme.html">detailed dataset description</a></p>
+<ul>
 <li><strong>Public Use Microdata Sample</strong>
-<ul class="incremental">
+<ul>
 <li>US Census Bureau data</li>
 <li>Individual person and household records</li>
 <li>Anonymized demographic information</li>
 <li>Income, education, housing, commute, etc.</li>
 </ul></li>
 <li><strong>Dataset characteristics:</strong>
-<ul class="incremental">
+<ul>
 <li>Multiple years (2005-2022, sans 2020)</li>
 <li>All US states and territories</li>
-<li>53 Million rows (person only)</li>
+<li>53 Million rows (person), 25 Million rows (household)</li>
 <li>200+ variables</li>
 </ul></li>
 </ul>
-</div>
 </section>
 <section id="reading-partitioned-pums-data" class="level2">
 <h2 class="anchored" data-anchor-id="reading-partitioned-pums-data">Reading Partitioned PUMS Data</h2>
