Deploy preview for PR 3 🛫

--- a/pr-preview/pr-3/index.html
+++ b/pr-preview/pr-3/index.html
@@ -228,7 +228,7 @@ ul.task-list li input[type="checkbox"] {
 </section>
 <section id="easiest-quickest-option" class="level1">
 <h1>Easiest, quickest option</h1>
-<p>Download a subset of the data: https://github.com/arrowrbook/book/releases/download/PUMS_subset/PUMS.subset.zip</p>
+<p>Download a subset of the data: <a href="https://github.com/arrowrbook/book/releases/download/PUMS_subset/PUMS.subset.zip">https://github.com/arrowrbook/book/releases/download/PUMS_subset/PUMS.subset.zip</a></p>
 <p>This subset only includes the person-level data for years 2005, 2018, 2021 and only for states Alaska, Alabama, Arkansas, Arizona, California, Washington, Wisconsin, West Virginia, and Wyoming.</p>
 <p>Simply download it and unzip it into a directory called data in your working directory and you can run the examples in the workshop.</p>
 </section>
