--- a/pr-preview/pr-6/dev/Outline_draft.html
+++ b/pr-preview/pr-6/dev/Outline_draft.html
@@ -137,11 +137,11 @@ ul.task-list li input[type="checkbox"] {
  <span class="dropdown-text">Practice using data.table</span></a>
   </li>  
         <li>
-    <a class="dropdown-item" href="../materials/activities/practice-arrow.qmd">
+    <a class="dropdown-item" href="../materials/activities/03-practice-arrow.html">
  <span class="dropdown-text">Practice using parquet, arrow, and duckdb</span></a>
   </li>  
         <li>
-    <a class="dropdown-item" href="../materials/activities/practice-workflow.qmd">
+    <a class="dropdown-item" href="../materials/activities/04-practice-workflow.html">
  <span class="dropdown-text">Put it all together</span></a>
   </li>  
     </ul>
