--- a/pr-preview/pr-6/materials/activities/03-practice-arrow.html
+++ b/pr-preview/pr-6/materials/activities/03-practice-arrow.html
@@ -174,11 +174,11 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
  <span class="dropdown-text">Practice using data.table</span></a>
   </li>  
         <li>
-    <a class="dropdown-item" href="../../materials/activities/practice-arrow.qmd">
+    <a class="dropdown-item" href="../../materials/activities/03-practice-arrow.html">
  <span class="dropdown-text">Practice using parquet, arrow, and duckdb</span></a>
   </li>  
         <li>
-    <a class="dropdown-item" href="../../materials/activities/practice-workflow.qmd">
+    <a class="dropdown-item" href="../../materials/activities/04-practice-workflow.html">
  <span class="dropdown-text">Put it all together</span></a>
   </li>  
     </ul>
